# YP_team_sprint

./: .auth.env  .booking_service.env  .dockerignore  .env  .gitignore  BENCHMARK.md  LICENSE  Makefile  README.md  database_dump.sql  docker-compose.auth_sprint.yaml  docker-compose.auth_test.yaml  docker-compose.diplom.yml  docker-compose.override.yml  docker-compose.tests.yaml  docker-compose.yaml  promptail-config.yaml  setup.cfg
analitycal_service/: .env.example  (+4 more)
booking_service/: .dockerignore  .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.diplom.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
booking_service/alembic/: env.py
booking_service/alembic/versions/: 1829fae950e0_add_location_in_address_model.py  27637291879b_add_addresses.py  3c9e2b7f63e6_add_events_and_reserbations_tables.py  83e37a70cd50_add_timezone_in_start_datetime_field.py  90f5024ddb5a_init.py  bac394f13bd4_add_user_and_event_feedbacks_tables.py  fdb3b77b468d_add_feedbacks_table.py
booking_service/copy-src/: main.py
booking_service/copy-src/infrastructure/: models.py
booking_service/src/: main.py
booking_service/src/api/v1/: depends.py  router.py
booking_service/src/core/: config.py  logger.py
booking_service/src/db/: postgres.py
booking_service/src/domain/: channels.py  exceptions.py
booking_service/src/domain/dtos/: address.py  event.py  event_feedback.py  feedback.py  movie.py  reservation.py  subscription.py  to_represent.py  user_feedback.py
booking_service/src/infrastructure/: container.py  lifetime.py  models.py  uow.py
booking_service/src/interfaces/: connection.py  lifetime.py
booking_service/src/services/: address.py  apps.py  event.py  exceptions.py  feedback.py  jwt.py  reservation.py  subscription.py  token.py
booking_service/tests/fakes/: producer.py  uow.py
booking_service/tests/unit/: factories.py  routers_fixture.py  test_address.py  test_address_service.py  test_event.py  test_events_database.py  test_producer.py  test_subscription.py  test_subscription_service.py
etl_click_house_service/: logger.py  main.py  pyproject.toml  settings.py
etl_click_house_service/src/: queries.py
etl_click_house_service/src/schemas/: base_user_event.py
etl_click_house_service/src/state_manager/: base_storage.py
(+534 files in other folders)
