[tool.poetry]
name = "booking-service"
version = "0.1.0"
description = ""
authors = ["Pavel Glavan <pglavan1998@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
alembic = "^1.16.4"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
uvicorn = "^0.35.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.41"
faststream = "^0.5.47"
dishka = "^1.6.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"
ruff = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ERA"]

[tool.mypy]
plugins = ['pydantic.mypy']

