[tool.poetry]
name = "booking-service"
version = "0.1.0"
description = ""
authors = ["Pavel Glavan <pglavan1998@mail.ru>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
alembic = "^1.16.4"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
uvicorn = "^0.35.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.41"
faststream = {extras = ["rabbit"], version = "^0.5.48"}
dishka = "^1.6.0"
polyfactory = "2.22.1"
httpx = "^0.28.1"
greenlet = "^3.2.3"
pyjwt = {version = "2.10.1", extras = ["crypto"]}


[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"
ruff = "^0.12.3"
pytest = "^8.4.1"
pytest-asyncio = "1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ERA"]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
pythonpath = [".", "src"]

