[tool.poetry]
name = "kafka-to-ch"
version = "0.1.0"
description = ""
authors = ["dfnsff <dfnsff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
pydantic-settings = "2.2.1"
pytz = "2024.1"
pydantic = "2.6.4"
clickhouse-connect = "0.8.15"
kafka-python = "2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
